--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,5 +80,8 @@
     "valarray": "cpp",
     "variant": "cpp"
   },
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "cmake.configureSettings": {
+    "PhysX_ROOT": "/home/maggo/PhysX"
+  }
 }
